<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.alphan.mcan.snoozecharity">

    <PreferenceCategory
        android:title="@string/alarm_clock_preferences">

        <RingtonePreference android:key="ringtone_pref"
            android:title="@string/set_ringtone"
            android:summary="@string/summary_ringtone_preference"
            android:ringtoneType="alarm"
            android:showDefault="true"
            android:showSilent="false" />

        <ListPreference
            android:key="snooze_duration"
            android:title="@string/snooze_preference"
            android:summary="%s"
            android:entries="@array/snooze_minute_text_array"
            android:entryValues="@array/snooze_minute_value_array"
            android:dialogTitle="@string/snooze_duration_preference_title"
            android:negativeButtonText="@string/cancel"
            android:defaultValue="5"/>

        <CheckBoxPreference
            android:key="vibration_pref"
            android:title="@string/vibration_checkbox_preference"
            android:summary="@string/summary_vibraion_preference"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/donation_preferences">


        <ListPreference
            android:key="donation_snooze_amount"
            android:title="@string/donation_preference"
            android:summary="%s"
            android:entries="@array/donation_amount_text_array"
            android:entryValues="@array/donation_amount_value_array"
            android:dialogTitle="@string/donation_preference_title"
            android:negativeButtonText="@string/cancel"
            android:defaultValue="20"/>

        <SwitchPreference
            android:key="payment_option"
            android:summary="@string/summary_payment_option"
            android:title="@string/payment_option_title"
            android:switchTextOn="@string/sms"
            android:switchTextOff="@string/web"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_color" >

    <com.alphan.mcan.snoozecharity.views.ColorPreference
        android:key="dash_colorkey"
        android:title="@string/pref_color_title"
        android:summary="@string/pref_color_summary"
        android:defaultValue="@color/navy"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        app:numColumns="3"
        app:itemLayout="@layout/dash_grid_item_color"
        />

        <SwitchPreference
            android:key="clock_type"
            android:title="@string/pref_hour_type_selection_title"
            android:switchTextOn="@string/analog_clock"
            android:switchTextOff="@string/digital_clock"
            android:defaultValue="true"/>

        <SwitchPreference
            android:key="24hour_option"
            android:title="@string/hour_option_title"
            android:switchTextOn="@string/hour24"
            android:switchTextOff="@string/am_pm"
            android:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>