<!--
  Copyright 2012 The Android Open Source Project
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
      http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/paid_donation_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="6dp"
                android:text="@string/paid_donations_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ListView
                android:id="@+id/paid_donation_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_gravity="center">

            <Button
                android:id="@+id/demo_collection_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/demo_collection" />

            <Button
                android:id="@+id/demo_external_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/demo_external_activity" />

            <Button
                android:id="@+id/donation_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/donation_history" />

            <Button
                android:id="@+id/about_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
