<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alarm_setter"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/alarm_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:maxLength="12"
            android:textSize="20sp"
            android:text="@string/alarm_default_name"
            android:background="#00000000"
            android:inputType="textCapWords"
            android:imeOptions="actionDone"/>

        <ImageButton
            android:id="@+id/deleteAlarm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/delete"
            android:padding="8dp"
            android:visibility="invisible"
            android:background="@drawable/delete_button_indicator"
            android:clickable="false"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/android_blue"/>

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TimePicker>

    <CheckBox
        android:id="@+id/alarm_repeat_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_repeat"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <ToggleButton
            android:id="@+id/toggle_monday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textColor="@android:color/darker_gray"
            android:clickable="false"
            style="@style/ToggleButton"
            android:enabled="false"
            android:singleLine="true"
            android:background="@drawable/toggle_button_indicator"
            android:textOn="@string/monday_short"
            android:textOff="@string/monday_short"/>
        <ToggleButton
            android:id="@+id/toggle_tuesday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textColor="@android:color/darker_gray"
            android:clickable="false"
            style="@style/ToggleButton"
            android:enabled="false"
            android:singleLine="true"
            android:background="@drawable/toggle_button_indicator"
            android:textOn="@string/tuesday_short"
            android:textOff="@string/tuesday_short"/>
        <ToggleButton
            android:id="@+id/toggle_wednesday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textColor="@android:color/darker_gray"
            android:clickable="false"
            style="@style/ToggleButton"
            android:enabled="false"
            android:singleLine="true"
            android:background="@drawable/toggle_button_indicator"
            android:textOn="@string/wednesday_short"
            android:textOff="@string/wednesday_short"
            />
        <ToggleButton
            android:id="@+id/toggle_thursday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textColor="@android:color/darker_gray"
            android:clickable="false"
            style="@style/ToggleButton"
            android:enabled="false"
            android:singleLine="true"
            android:background="@drawable/toggle_button_indicator"
            android:textOn="@string/thursday_short"
            android:textOff="@string/thursday_short"/>
        <ToggleButton
            android:id="@+id/toggle_friday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textColor="@android:color/darker_gray"
            android:clickable="false"
            style="@style/ToggleButton"
            android:enabled="false"
            android:singleLine="true"
            android:background="@drawable/toggle_button_indicator"
            android:textOn="@string/friday_short"
            android:textOff="@string/friday_short"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"/>

        <ToggleButton
            android:id="@+id/toggle_saturday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textColor="@android:color/darker_gray"
            android:clickable="false"
            style="@style/ToggleButton"
            android:enabled="false"
            android:singleLine="true"
            android:background="@drawable/toggle_button_indicator"
            android:textOn="@string/saturday_short"
            android:textOff="@string/saturday_short"/>

        <ToggleButton
            android:id="@+id/toggle_sunday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textColor="@android:color/darker_gray"
            android:clickable="false"
            style="@style/ToggleButton"
            android:enabled="false"
            android:singleLine="true"
            android:background="@drawable/toggle_button_indicator"
            android:textOn="@string/sunday_short"
            android:textOff="@string/sunday_short"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
    </LinearLayout>

</LinearLayout>